the_project/base/manifests/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: the-project-volume
          persistentVolumeClaim:
            claimName: the-project-claim
      containers:
        - name: todo-app
          image: TODO_APP
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "20m"
              memory: "64Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
          volumeMounts:
            - name: the-project-volume
              mountPath: /app/cache
