the_project/base/manifests/postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: project-postgres
spec:
  selector:
    matchLabels:
      app: project-postgres
  serviceName: project-postgres-svc
  replicas: 1
  template:
    metadata:
      labels:
        app: project-postgres
    spec:
      containers:
      - name: postgres
        image: postgres:17-alpine
        resources:
          requests:
            cpu: "10m"
            memory: "64Mi"
          limits:
            cpu: "150m"
            memory: "128Mi"
        ports:
        - containerPort: 5432
          name: web
        volumeMounts:
        - name: pgdata
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: pgdata
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 100Mi
