the_project/base/manifests/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-postgres-svc
spec:
  selector:
    app: project-postgres
  clusterIP: None
  ports:
  - port: 5432
    name: web
